# lakebase-scm-extension

./: .gitignore  .mocharc.yml  .vscodeignore  CHANGELOG.md  README.md  lakebase-scm-extension-0.5.0.vsix  lakebase-scm-extension-0.5.1.vsix  lakebase-scm-extension-0.5.3.vsix  package-lock.json  package.json  tsconfig.json  webpack.config.js
docs/: e-commerce-scenarios.md  phase-j-parity-audit.md  plugin-plan.md  refactoring-plan.md  sidebar-plan.md
src/: extension.ts
src/providers/: branchTreeProvider.ts  changesTreeProvider.ts  graphWebview.ts  lakebaseSchemaTree.ts  mergesTree.ts  migrationsTree.ts  pullRequestTree.ts  runnerTreeProvider.ts  schemaContentProvider.ts  schemaDiffProvider.ts  schemaScmProvider.ts  statusBarProvider.ts
src/services/: deployService.ts  diffService.ts  flywayService.ts  gitService.ts  graphService.ts  lakebaseService.ts  projectCreationService.ts  runnerService.ts  scaffoldService.ts  schemaDiffService.ts  schemaMigrationService.ts
src/utils/: ciSecrets.ts  config.ts  diffBuilder.ts  exec.ts  theme.ts
templates/project/: .env.example  .gitignore
templates/project/python/: .gitignore.extra  Makefile  alembic.ini  pyproject.toml  requirements.txt
templates/project/python/alembic/: env.py
templates/project/python/alembic/versions/: 001_init_placeholder.py
templates/project/python/app/: database.py  main.py  models.py
templates/project/python/tests/: conftest.py  test_app.py
test/: setup.js  tsconfig.json
test/integration/: branchLifecycle.test.ts  gitServiceMethods.test.ts  projectCreation.test.ts  r2GitHubUrl.test.ts  (+15 more)
(+92 files in other folders)
